# primeindex

./: .env.example  .gitignore  README.md  prime_index_spec.md
.github/workflows/: nightly.yml
api/: pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2b10d103d2d4_initial_schema.py  57a246a4ca47_add_volume_aware_shrinkage_debug_fields.py  8c5ec70d47b9_add_shrinkage_raw_scores_n_sentences_.py
api/app/: config.py  db.py  logging_setup.py  main.py  models.py  schemas.py
api/app/classify/: classifier.py  claude_client.py
api/app/ingest/: google_places.py  reddit.py  seed_chicago.py  slugs.py
api/app/jobs/: nightly.py
api/app/routes/: cities.py  restaurants.py
api/app/score/: scorer.py
data/: chicago_seed.csv
docs/: methodology.md
web/: .gitignore  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/chicago/: RankedList.tsx  page.tsx
web/app/methodology/: page.tsx
web/app/restaurant/[slug]/: page.tsx
web/lib/: api.ts  format.ts  types.ts
