[project]
name = "prime-index-api"
version = "0.1.0"
description = "Prime Index — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # Postgres driver. Required in any environment that points DATABASE_URL at
    # Postgres (Supabase in prod, plus local migrations against Supabase). Local
    # dev with sqlite:/// URLs doesn't need it but importing it as a base dep
    # avoids surprise ImportErrors at startup.
    "psycopg2-binary>=2.9",
    # Anthropic SDK — used by the classifier and the score-summarizer. Promoted
    # from optional to base because the nightly orchestrator and the scoring
    # path on the running API both import it.
    "anthropic>=0.39",
]

[project.optional-dependencies]
ingest = [
    "praw>=7.7",
    "googlemaps>=4.10",
]
classify = [
    "anthropic>=0.39",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
